RESOLVED FIXED116799
Plugins with no src but valid type should not snapshot
https://bugs.webkit.org/show_bug.cgi?id=116799
Summary Plugins with no src but valid type should not snapshot
Dean Jackson
Reported 2013-05-26 16:11:49 PDT
There are a few plugins in the wild that don't take any src attribute - they simply load the plugin from the mime type. Google Hangouts is an example.
Attachments
Patch (3.09 KB, patch)
2013-05-26 16:15 PDT, Dean Jackson
simon.fraser: review+
Dean Jackson
Comment 1 2013-05-26 16:15:27 PDT
Dean Jackson
Comment 2 2013-05-26 16:19:32 PDT
Darin Adler
Comment 3 2013-05-26 18:02:58 PDT
Comment on attachment 202933 [details] Patch View in context: https://bugs.webkit.org/attachment.cgi?id=202933&action=review > Source/WebCore/html/HTMLPlugInImageElement.cpp:649 > + if ((m_loadedUrl.isNull() || m_loadedUrl.isEmpty()) && !loadedMimeType().isEmpty()) { No need to write (m_loadedUrl.isNull() || m_loadedUrl.isEmpty()); that’s the same as m_loadedUrl.isEmpty().
Dean Jackson
Comment 4 2013-05-26 18:46:03 PDT
Note You need to log in before you can comment on or make changes to this bug.