Plugins with no src but valid type should not snapshot https://bugs.webkit.org/show_bug.cgi?id=116799 <rdar://problem/13695911>

Reviewed by Simon Fraser.

There are a few plug-ins around that don't take any source content
via the src attribute, but rather just load the binary based on the
mime-type. In those cases we shouldn't snapshot until we have a
mechanism to do so.

* html/HTMLPlugInImageElement.cpp:
(WebCore::HTMLPlugInImageElement::subframeLoaderWillCreatePlugIn):
    Add MIMEType logging, and detect the case of no src but valid type.
* html/HTMLPlugInImageElement.h: Add another SnapshotReason enum for
    this special case.

Canonical link: https://commits.webkit.org/135099@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@150731 268f45cc-cd09-0410-ab3c-d52691b4dbfc